# fast-flow-transform

./: .gitignore  .oxfmtrc.json  .oxfmtrc.jsonc  .oxlintrc.json  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.base.json  tsconfig.json  turbo.json
.changeset/: README.md  config.json
.github/: labels.yml  pr-labeler.yml  release.yml
.github/scripts/: ensure-managed-labels.cjs  ensure-managed-labels.mts  sync-release-labels.mts  sync-release-labels.ts
.github/workflows/: bootstrap-publish.yml  bootstrap-release-packages.yml  canary-release.yml  create-release.yml  finalize-release.yml  label-sync.yml  pr-checks.yml  pr-ci.yml  pr-hygiene.yml  pr-musl-builds.yml  prepare-release.yml  publish-release.yml
assets/: bench-20260316T182013Z.json  bench-20260316T183236Z.json  bench-20260322T115104Z.json  readme-benchmark.json
bench/: babel-core.d.ts  benchmark.ts  benchmarkCases.ts  benchmarkIsolated.ts  benchmarkReport.ts  benchmarkViewProcess.ts  candidates.ts  compare.test.ts  compare.ts  compareTestHelpers.ts  native.ts  package.json  renderReadmeBenchmark.ts  runtime.ts  stats.ts
bench/fixtures/: single-file-flow-preserve.js  source.flow.js  source.flow.preserve.js
bindings/darwin-arm64/: README.md  package.json
bindings/darwin-x64/: README.md  package.json
bindings/fast-flow-transform-darwin-arm64/: index.js  package.json  tsconfig.build.json
bindings/fast-flow-transform-darwin-x64/: index.ts  package.json
bindings/fast-flow-transform-linux-arm64/: package.json
bindings/fast-flow-transform-linux-x64/: package.json  tsconfig.json
bindings/fast-flow-transform-win32-arm64/: index.js  index.ts  package.json
bindings/fast-flow-transform-win32-x64/: package.json
bindings/fft-loader-darwin-arm64/: package.json
bindings/fft-loader-linux-x64/: package.json
bindings/fft-loader-win32-arm64/: package.json  tsconfig.json
bindings/fft-loader-win32-x64/: index.js  package.json
bindings/linux-arm64-gnu/: README.md  package.json
bindings/linux-arm64-musl/: README.md  package.json
bindings/linux-x64-gnu/: README.md  package.json
bindings/linux-x64-musl/: README.md  package.json
bindings/win32-arm64-msvc/: README.md  package.json
bindings/win32-x64-msvc/: README.md  package.json
config/: verdaccio.yaml
crates/fft/: Cargo.toml
crates/fft/src/: comments.rs  gen_js.rs  lib.rs  resolve_dependency.rs
crates/fft/src/hparser/: convert.rs  generated_cvt.rs  mod.rs
crates/fft/src/sema/: keywords.rs  resolver.rs  sem_context.rs
crates/fft/tests/ast/: mod.rs  validate.rs
crates/fft/tests/gen_js/: mod.rs
crates/fft_ast/: Cargo.toml
crates/fft_ast/src/: context.rs  def.rs  dump.rs  field.rs  kind.rs  lib.rs  node_child.rs  node_enums.rs
crates/fft_node/: Cargo.toml
crates/fft_node/src/: comment_support.rs  lib.rs  preserve.rs  preserve_output.rs  printer_comments.rs  transform.rs
crates/fft_pass/: Cargo.toml
crates/fft_pass/src/: lib.rs  manager.rs
crates/fft_pass/src/passes/: add_negative.rs  reduce_conditional.rs  strip_flow.rs
crates/fft_pass/tests/: strip_flow.rs
crates/fft_strip/: Cargo.toml
crates/fft_strip/src/: lib.rs  main.rs
crates/fft_strip/tests/: library.rs
crates/fft_support/: Cargo.toml  build.rs
crates/fft_support/src/: lib.rs  scoped_hashmap.rs
crates/hermes/: Cargo.toml  build.rs
crates/hermes/src/: lib.rs
crates/hermes/src/parser/: generated_ffi.rs  hermes_parser.rs  node.rs
crates/juno_flow_strip/: Cargo.toml
crates/juno_flow_strip/src/: main.rs
crates/libcplusplus/: Cargo.toml
docs/plans/: 2026-03-09-in-process-binding-implementation.md  2026-03-09-remove-fft-strip.md
examples/: README.md
examples/esbuild/: README.md  build.mjs  esbuild.e2e.test.ts  package.json  tsconfig.json  vitest.config.ts
examples/parcel/: .parcelrc  README.md  package.json  parcel-transformer.cjs  parcel.e2e.test.ts  tsconfig.json  vitest.config.ts
examples/rolldown/: README.md  package.json  rolldown.config.mjs  rolldown.e2e.test.ts  tsconfig.json  vitest.config.ts
examples/rollup/: README.md  package.json  rollup.config.mjs  rollup.e2e.test.ts  tsconfig.json  vitest.config.ts
examples/rsbuild/: README.md  package.json  rsbuild.config.mjs  rsbuild.e2e.test.ts  tsconfig.json  vitest.config.ts
examples/rspack/: README.md  package.json  rspack.config.mjs  rspack.e2e.test.ts  tsconfig.json  vitest.config.ts
examples/vite/: README.md  package.json  tsconfig.json  vite.config.mjs  vite.e2e.test.ts  vitest.config.ts
examples/webpack/: README.md  package.json  tsconfig.json  vitest.config.ts  webpack.config.mjs  webpack.e2e.test.ts
js/: package.json
js/fft-loader/: README.md  package.json
js/fft-loader-darwin-arm64/: package.json
js/fft-loader-darwin-x64/: package.json
js/fft-loader-linux-arm64/: package.json
js/fft-loader-linux-x64/: index.js  package.json
js/fft-loader-win32-arm64/: package.json
js/fft-loader-win32-x64/: package.json
js/juno-flow-strip-loader/: README.md  package.json
js/juno-flow-strip-loader-darwin-arm64/: package.json
js/juno-flow-strip-loader-darwin-x64/: package.json
js/juno-flow-strip-loader-linux-arm64/: index.js  package.json
js/juno-flow-strip-loader-linux-x64/: package.json
js/juno-flow-strip-loader-win32-arm64/: package.json
js/juno-flow-strip-loader-win32-x64/: index.js  package.json
patches/: hermes-simple-ilist-empty-bases.patch
scripts/: generate-rust-bindings.mts  generate-rust-bindings.test.mts  hermes-rustgen-core.mts  hermes-rustgen-lib.mts  pack-local.mts  regen-bindings.sh  sync-binary.mts  sync-binding.mts  sync-hermes.sh
scripts/local-registry/: publish.mts  publish.ts  setup.mts  start.mts  start.ts  verdaccio.mts
scripts/release/: apply-release-version.mts  apply-release-version.ts  cleanup-package-assets.mts  finalize-release.mts  finalize-release.ts  generate-readme-benchmark.mts  publish-package.ts  (+8 more)
tests/: monorepo-layout.test.mjs
(+102 files in other folders)
