[package]
name = "fft"
version = "0.1.0"
authors = ["Fast Flow Transform maintainers <TODO>"]
edition = "2018"
license = "MIT"

[dependencies]
hermes = { path = "../hermes" }
fft_ast = { path = "../fft_ast" }
fft_support = { path = "../fft_support" }
thiserror = "1.0"
sourcemap = "6.0"
smallvec = "1.6.1"
