[package]
name = "fft"
version = "0.0.3"
authors = ["Jakub Romanczyk <j.romanczyk@gmail.com>"]
description = "JavaScript transform library derived from Hermes Juno"
edition = "2018"
license = "MIT"
repository = "https://github.com/jbroma/fast-flow-transform"

[dependencies]
hermes = { path = "../hermes" }
fft_ast = { path = "../fft_ast" }
fft_support = { path = "../fft_support" }
thiserror = "1.0"
sourcemap = "6.0"
smallvec = "1.6.1"
