[package]
name = "fft_ast"
version = "0.1.0"
authors = ["Jakub Romanczyk <j.romanczyk@gmail.com>"]
description = "AST definitions and utilities for fast-flow-transform"
edition = "2018"
license = "MIT"
repository = "https://github.com/jbroma/fast-flow-transform"

[dependencies]
fft_support = { path = "../fft_support" }
libc = "0.2"
memoffset = "0.6.1"
thiserror = "1.0"
