[package]
name = "fft_node"
version = "0.0.1"
authors = ["Jakub Romanczyk <j.romanczyk@gmail.com>"]
description = "Node-API binding for fast-flow-transform"
edition = "2018"
license = "MIT"
repository = "https://github.com/jbroma/fast-flow-transform"

[lib]
crate-type = ["cdylib"]

[dependencies]
fft_strip = { path = "../fft_strip" }
napi = { version = "3.1.6", default-features = false }
napi-derive = { version = "3.1.2", default-features = false }

[build-dependencies]
napi-build = { version = "2.2.3", default-features = false }
