[package]
name = "fft_pass"
version = "0.1.0"
authors = ["Jakub Romanczyk <j.romanczyk@gmail.com>"]
description = "Transformation passes for fast-flow-transform"
edition = "2018"
license = "MIT"
repository = "https://github.com/jbroma/fast-flow-transform"

[dependencies]
fft = { path = "../fft" }

[dev-dependencies]
fft_support = { path = "../fft_support" }
