[package]
name = "fft_strip"
version = "0.1.0"
authors = ["Fast Flow Transform maintainers <TODO>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "fft-strip"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
fft = { path = "../fft" }
fft_pass = { path = "../fft_pass" }
fft_support = { path = "../fft_support" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
