[package]
name = "fft_support"
version = "0.1.0"
authors = ["Jakub Romanczyk <j.romanczyk@gmail.com>"]
description = "Support utilities for fast-flow-transform and Hermes bindings"
edition = "2018"
license = "MIT"
repository = "https://github.com/jbroma/fast-flow-transform"

[dependencies]
libcplusplus = { path = "../libcplusplus" }
base64 = "0.13"
anyhow = "1.0"
thiserror = "1.0"
url = "2.2.2"

[build-dependencies]
cmake = "0.1"
