[package]
name = "hermes"
version = "0.0.1"
authors = ["Jakub Romanczyk <j.romanczyk@gmail.com>"]
description = "Rust bindings for the Hermes parser used by fast-flow-transform"
edition = "2018"
license = "MIT"
repository = "https://github.com/jbroma/fast-flow-transform"

[dependencies]
fft_support = { path = "../fft_support" }
libcplusplus = { path = "../libcplusplus" }
libc = "0.2"
thiserror = "1.0"

[build-dependencies]
cmake = "0.1"
