[package]
name = "libcplusplus"
version = "0.1.0"
authors = ["Jakub Romanczyk <j.romanczyk@gmail.com>"]
description = "C++ runtime linkage helpers for fast-flow-transform"
edition = "2018"
license = "MIT"
repository = "https://github.com/jbroma/fast-flow-transform"

[dependencies]

[build-dependencies]
